test/Fail/Issue2442-postulate.agda
{-# OPTIONS --safe #-}

module Issue2442-postulate where

postulate

  A : Set
