test/Fail/Issue2442-postulate.err
Issue2442-postulate.agda:7.3-10: error: [SafeFlagPostulate]
Cannot postulate A with safe flag
when scope checking the declaration
  A : Set
